@@ -495,6 +495,7 @@
 			<winsserver></winsserver>
 			<homesenable>0</homesenable>
 			<homesbrowseable>1</homesbrowseable>
+			<homesrecyclebin>0</homesrecyclebin>
 			<extraoptions></extraoptions>
 			<shares>
 				<!--
